# Firework.Runtime

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Firework.Components.Core2D/shaders/: Colored.frag.sc  Colored.vert.sc  Image.frag.sc  Image.vert.sc  NoOp.frag.sc  NoOp.vert.sc  Panel.vert.sc  Path.frag.sc  Path.vert.sc  ShapeOutline.frag.sc  ShapeOutline.vert.sc  StencilPath.frag.sc  Text.frag.sc  Text.vert.sc  TextBranchless.frag.sc  varying.def.sc
Firework.Components.Core2D/src/: Firework.Components.Core2D
Firework.Components.Core2D/src/Components/: Button.cpp  Button.h  ComponentCoreStaticInit.cpp  ComponentStaticInit.cpp  Image.cpp  Image.h  Mask.cpp  Mask.h  PackageFileCore.h  Panel.cpp  Panel.h  Path.cpp  Path.h  ScalableVectorGraphic.cpp  ScalableVectorGraphic.h  Text.cpp  Text.h
Firework.Components.Core2D/src/Drawing/: Core.h
Firework.Components.Core2D/src/Friends/: CascadingStyleParser.cpp  CascadingStyleParser.h  Color.h  FilledPathRenderer.cpp  FilledPathRenderer.h  FringeRenderer.cpp  FringeRenderer.h  Multisample.h  PackageFileCore2D.cpp  PackageFileCore2D.h  ParagraphIterator.h  ShapeRenderer.cpp  ShapeRenderer.h  VectorParser.cpp  VectorParser.h  VectorTools.cpp  VectorTools.h
Firework.Components.Core2D/src/PackageSystem/: ExtensibleMarkupFile.h  PortableNetworkGraphicFile.h  TrueTypeFontFile.h
Firework.Components.Core3D/shaders/: Mesh.frag.sc  Mesh.vert.sc  varying.def.sc
Firework.Components.Core3D/src/Components/: Camera.cpp  Camera.h  ComponentCoreStaticInit.cpp  Mesh.cpp  Mesh.h
Firework.Mathematics/include/: Mathematics.h  _Mathematics.h
Firework.Runtime.CoreLib/include/Firework/: Config.h  Entry.h
Firework.Runtime.CoreLib/module/: Firework.Core.cxx  Firework.Core.hpp
Firework.Runtime.CoreLib/src/: Firework.Runtime.CoreLib  __mingw_cpptrace_fix.h  __msvc_bgfx_fix.h
Firework.Runtime.CoreLib/src/Components/: ComponentData.h  EntityAttributes.h  RectTransform.cpp  RectTransform.h  Transform.cpp  Transform.h
Firework.Runtime.CoreLib/src/Core/: Application.cpp  Application.h  CoreEngine.cpp  CoreEngine.h  Cursor.cpp  Cursor.h  Debug.cpp  Debug.h  Display.cpp  Display.h  HardwareExcept.cpp  HardwareExcept.h  Input.cpp  Input.h  PackageManager.cpp  PackageManager.h  RenderJob.h  Time.cpp  Time.h
Firework.Runtime.CoreLib/src/EntityComponentSystem/: Component.h  ComponentData.cpp  ComponentData.h  EngineEvent.cpp  EngineEvent.h  Entity.cpp  Entity.h  EntityManagement.cpp  EntityManagement.h  EntityManagement.inc  SceneManagement.cpp  SceneManagement.h
Firework.Runtime.CoreLib/src/ExceptionHandler/: Signal_dfl.h  Signal_glibc.h  Signal_mingw.h  Signal_win32.h
Firework.Runtime.CoreLib/src/Objects/: Component.h  Component2D.cpp  Component2D.h  Entity.cpp  Entity.h  Entity.inc  Entity2D.cpp  Entity2D.h  Entity2D.inc  Object.h
Firework.Runtime.GL/include/: GL.Config.h
Firework.Runtime.GL/shaders/: DebugCube.frag.sc  Lighting.sh  PhongLit.frag.sc  PhongLit.vert.sc  varying.def.sc
Firework.Runtime.GL/src/GL/: Common.h  Framebuffer.cpp  Framebuffer.h  Geometry.cpp  Geometry.h  Instancing.h  Lighting.cpp  Lighting.h  LitObject.cpp  LitObject.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureFormat.h  TextureVector.h  TextureVector.sh  Transform.cpp  Transform.h  Uniform.cpp  Uniform.h
Firework.Runtime.GL/src/Utility/: StringLiteral.h
Firework.Runtime.GL/src/nanovg/: nanovg.cpp  nanovg.h  nanovg_bgfx.h
Firework.Runtime.RenderPipeline/shaders/: Draw.frag.sc  Draw.vert.sc  Generic.frag.sc  Generic.vert.sc  Shading.sh  varying.def.sc
Firework.Runtime.RenderPipeline/src/GL/: Light.cpp  Light.h  RenderPipeline.cpp  RenderPipeline.h
Firework.Tools/: CMakeLists.txt
Firework.Tools/src/: Packager.cpp  Packager.h  packager.sc_main.cpp  packager_main.cpp
Firework.Typography/src/Font/: Font.cpp  Font.h
cmake/: PackageArchive.cmake  PrecompileShaders.cmake  install_headers.cmake  package_archive.cmake  precompile_shaders.cmake  precompile_shaders_script.cmake
cmake/cmake-bin2h/: bin2h.cmake
examples/: common.h
examples/DevTest/: main.cpp
examples/DevTest/Assets/: Glock18.fbx  untitled.blend  untitled.fbx
examples/HelloFireworkUI/: main.cpp
examples/visual_shape_renderer/: main.cpp
examples/visual_svg/: main.cpp
examples/visual_text/: main.cpp
